# dcmspec-explorer

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CONTRIBUTING.md  README.md  pyproject.toml
config/: dcmspec_explorer_config.example.json  dcmspec_explorer_config.json  favorites.json
scripts/: compile_ui.py
src/dcmspec_explorer/: app_config.py  main.py
src/dcmspec_explorer/controller/: app_controller.py  iod_treeview_adapter.py
src/dcmspec_explorer/model/: model.py
src/dcmspec_explorer/qt/: qt_roles.py
src/dcmspec_explorer/resources/: load_iod_dialog.ui  main_window.ui
src/dcmspec_explorer/resources/styles/: details.css
src/dcmspec_explorer/services/: favorites_manager.py  iod_loading_service.py  progress_observer.py  service_mediator.py
src/dcmspec_explorer/view/: favorite_icon_delegate.py  load_iod_dialog.py  load_iod_dialog_ui.py  main_window.py  main_window_ui.py
